k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend

          image: kunalsingh9038/devops-cloud-frontend:a5d9f3a

          imagePullPolicy: Always

          ports:
            - containerPort: 80
